# uv-test

./: README.md
package1/: pyproject.toml
package1/src/package1/: __init__.py
package2/: pyproject.toml
package2/src/package2/: __init__.py
