[project]
name = "package2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kristian Sloth Lauszus", email = "lauszus@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
package2 = "package2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
